Axum serving static file directory
server/build.rs that builds and runs wasm-bindgen on the service-worker crate to generate the wasm + bindings

Demo index.html that uses the built wasm

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,12 @@ edition = "2021"
 version = "0.0.2"
 
 [workspace.dependencies]
+# Logging and tracing facade
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+
+# Loading env from .env files
+dotenv = "0.15.0"
 
 [profile.release]
 opt-level = 2
