--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -7,5 +7,63 @@ workspace = true
 [package.version]
 workspace = true
 
+[build-dependencies]
+anyhow = "1.0.82"
+cargo_toml = "0.19.2"
+wasm-bindgen-cli-support = "0.2.92"
+
 [dependencies]
 shared = { path = "../shared" }
+tracing = { workspace = true }
+
+# Application error helper
+anyhow = "1.0.82"
+
+# Web framework
+axum = "0.7.5"
+
+# Date/time util
+chrono = { version = "0.4.38", features = ["serde"] }
+
+# CLI arg parsing
+clap = { version = "4.5.4", features = [ "derive", "env" ] }
+
+# COBS encoding
+corncobs = { version = "0.1.3", features = ["std"] }
+
+# Parsing and expanding cron schedules
+croner = "2.0.4"
+
+# Future util
+futures = "0.3.30"
+
+# Macro to include a dir in the binary
+include_dir = "0.7.3"
+
+# SQLite lib
+rusqlite = { version = "0.31.0", features = ["bundled", "serde_json", "trace"] }
+
+# Migrations for rusqlite
+rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
+
+# Se/deserializing 
+serde = { version = "1.0.198", features = ["derive"] }
+serde_json = "1.0.116"
+
+# Helpful traits and macros for working with enums and strings 
+strum = { version = "0.26.2", features = ["derive"] }
+
+# Async runtime
+tokio = { version = "1.37.0", features = [ "full" ] }
+
+# Async wrapper for rusqlite
+tokio-rusqlite = "0.5.1"
+
+# Utils for tokio runtime
+tokio-util = "0.7.10"
+
+# HTTP utils
+tower-http = { version = "0.5.2", features = [ "trace", "fs" ] }
+
+# ZSTD encryption bindings
+zstd = "0.13.1"
