--- a/crates/service-worker/Cargo.toml
+++ b/crates/service-worker/Cargo.toml
@@ -11,12 +11,16 @@ workspace = true
 workspace = true
 
 [dependencies]
+console_error_panic_hook = "0.1.7"
+js-sys = "0.3.69"
 shared = { path = "../shared" }
 wasm-bindgen = "0.2.92"
+wasm-bindgen-futures = "0.4.42"
 web-sys = { version = "0.3.69", features = [ 
     "console", "FetchEvent",  "Request",  
     "ReadableStream",  "ReadableStreamDefaultReader", 
     "Headers",  "ResponseInit",  "Response", 
     "ServiceWorkerGlobalScope", "WorkerGlobalScope", 
-    "WorkerLocation", "Clients",
+    "WorkerLocation", "Clients", "CacheStorage",
+    "Cache",
 ] }
