--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -12,3 +12,7 @@ thiserror = "1.0.58"
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 dotenv = { workspace = true }
+cargo_toml = { workspace = true }
+anyhow = { workspace = true }
+chrono = { workspace = true }
+serde = { workspace = true }
