--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,5 +27,7 @@ chrono = "0.4.38"
 serde = { version = "1.0.198", features = ["derive"] }
 serde_json = "1.0.116"
 
+sha2 = "0.10.8"
+
 [profile.release]
 opt-level = 2
