--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -9,10 +9,13 @@ workspace = true
 
 [build-dependencies]
 anyhow = { workspace = true }
+sha2 = { workspace = true }
+serde_json = { workspace = true }
 wasm-bindgen-cli-support = "0.2.92"
 shared = { path = "../shared" }
 base64 = "0.22.0"
 wasm-opt = "0.116.1"
+glob = "0.3.1"
 
 [dependencies]
 shared = { path = "../shared" }
@@ -70,3 +73,4 @@ tower = "0.4.13"
 
 # ZSTD encryption bindings
 zstd = "0.13.1"
+walkdir = "2.5.0"
