Service worker checking fetch integrity from package
Client page working with service worker to detect and install new sw versions

--- a/crates/service-worker/Cargo.toml
+++ b/crates/service-worker/Cargo.toml
@@ -22,5 +22,7 @@ web-sys = { version = "0.3.69", features = [
     "Headers",  "ResponseInit",  "Response", 
     "ServiceWorkerGlobalScope", "WorkerGlobalScope", 
     "WorkerLocation", "Clients", "CacheStorage",
-    "Cache",
+    "Cache", "RequestInit", "MessageEvent"
 ] }
+gloo-utils = "0.2.0"
+serde = { workspace = true }
