--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
           os: ubuntu-22.04
           rust: stable
           target: x86_64-unknown-linux-gnu
+          use-cross: false
 
     steps:
     - name: Get tag
@@ -60,8 +61,17 @@ jobs:
         toolchain: ${{ matrix.rust }}
         target: ${{ matrix.target }}
         override: true
+
+    - name: Use c and c++ compiler from matrix
+      shell: bash
+      run: |
+        echo "CC=${{matrix.c-compiler}}" >> $GITHUB_ENV
+        echo "CXX=${{matrix.cxx-compiler}}" >> $GITHUB_ENV
+        echo -e "[build]\npre-build = [\n\"export CC=${{matrix.c-compiler}}\",\n\"export CXX=${{matrix.cxx-compiler}}\"]" >> Cross.toml
+
     
     - name: Use Cross
+      if: ${{ matrix.use-cross }}
       shell: bash
       run: |
         cargo install cross
@@ -79,11 +89,13 @@ jobs:
         echo "cargo command is: ${{ env.CARGO }}"
         echo "target flag is: ${{ env.TARGET_FLAGS }}"
         echo "target dir is: ${{ env.TARGET_DIR }}"
+        echo "cc is: ${{ env.CC }}. ccx is: ${{ env.CXX }}"
+        $CC --version
+        $CXX --version
+        echo "cat Cross.toml:"
+        cat Cross.toml
 
     - name: Build release binary
-      env:
-        CC: ${{matrix.c-compiler}}
-        CXX: ${{matrix.cxx-compiler}}
       run: ${{ env.CARGO }} build --verbose --release ${{ env.TARGET_FLAGS }}
 
     - name: Strip and archive release (Non-Windows)
@@ -104,9 +116,15 @@ jobs:
             _extra_dir="";
           fi
 
-          strip target/${{ matrix.target }}/release/${_bin_name}
-          chmod +x target/${{ matrix.target }}/release/${_bin_name}
-          mv target/${{ matrix.target }}/release/${_bin_name} ./${_final_name}
+          if [ "${{ matrix.use-cross }}" == true & "${{ matrix.target }}" != "" ]; then
+            _release_dir="target/${{ matrix.target }}/release"
+          else
+            _release_dir="target/release"
+          fi
+
+          strip ${_release_dir}/${_bin_name}
+          chmod +x ${_release_dir}/${_bin_name}
+          mv ${_release_dir}/${_bin_name} ./${_final_name}
           tar -czf ${_final_name}_${{ env.SUFFIX }}_linux.tar.gz ${_final_name} README.md ${_extra_dir}
         done
 
