Housekeeping before starting leptos client

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build
 
 env:
   # bin name:final name:extra dir,..
-  EXECUTABLE_NAMES: "server:server:crates/server/static"
+  EXECUTABLE_NAMES: "server:server:crates/server/assets"
   CARGO_TERM_COLOR: always
 
 on:
