--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,12 @@ resolver = "2"
 edition = "2021"
 version = "0.0.10"
 
+# This is used for the service worker wasm package
+[profile.dev-min-size]
+inherits = "dev"
+opt-level = "s" #Optimize for size
+lto = "thin"
+
 [workspace.dependencies]
 # Logging and tracing facade
 tracing = "0.1.40"
@@ -28,6 +34,8 @@ serde = { version = "1.0.198", features = ["derive"] }
 serde_json = "1.0.116"
 
 sha2 = "0.10.8"
+
+leptos = { version = "0.6.11", features = ["nightly", "csr"] }
 
 [profile.release]
 opt-level = 2
