--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -19,10 +19,10 @@ glob = "0.3.1"
 
 [dependencies]
 shared = { path = "../shared" }
-tracing = { workspace = true }
 
-# Application error helper
 anyhow = { workspace = true }
+leptos = { workspace = true }
+tracing = { workspace = true }
 
 # Web framework
 axum = "0.7.5"
