--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
         include:
         - build: linux-gnu
           os: ubuntu-22.04
-          rust: stable
+          rust: nightly
           target: x86_64-unknown-linux-gnu
           use-cross: false
 
