server/build.rs updated to build client wasm in addition to service worker

--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -1,16 +1,13 @@
 [package]
 name = "server"
-
-[package.edition]
-workspace = true
-
-[package.version]
-workspace = true
+edition.workspace = true
+version.workspace = true
 
 [build-dependencies]
-anyhow = { workspace = true }
-sha2 = { workspace = true }
-serde_json = { workspace = true }
+anyhow.workspace = true
+sha2.workspace = true
+serde_json.workspace = true
+
 wasm-bindgen-cli-support = "0.2.92"
 shared = { path = "../shared" }
 base64 = "0.22.0"
@@ -20,9 +17,9 @@ glob = "0.3.1"
 [dependencies]
 shared = { path = "../shared" }
 
-anyhow = { workspace = true }
-leptos = { workspace = true }
-tracing = { workspace = true }
+anyhow.workspace = true
+leptos.workspace = true
+tracing.workspace = true
 
 # Web framework
 axum = "0.7.5"
