--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ opt-level = "s" #Optimize for size
 lto = "thin"
 
 [workspace.dependencies]
+# Panic hook to make debugging wasm easier
+console_error_panic_hook = "0.1.7"
+
 # Logging and tracing facade
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
