--- a/crates/service-worker/Cargo.toml
+++ b/crates/service-worker/Cargo.toml
@@ -1,17 +1,15 @@
 [package]
 name = "service-worker"
+edition.workspace = true
+version.workspace = true
 
 [lib]
 crate-type = ["cdylib", "rlib"]
 
-[package.edition]
-workspace = true
-
-[package.version]
-workspace = true
-
 [dependencies]
-console_error_panic_hook = "0.1.7"
+serde.workspace = true
+console_error_panic_hook.workspace = true
+
 js-sys = "0.3.69"
 shared = { path = "../shared" }
 wasm-bindgen = "0.2.92"
@@ -25,4 +23,3 @@ web-sys = { version = "0.3.69", features = [
     "Cache", "RequestInit", "MessageEvent"
 ] }
 gloo-utils = "0.2.0"
-serde = { workspace = true }
