--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,13 @@ version = "0.0.13"
 
 # This is used for the service worker wasm package
 [profile.dev-min-size]
-inherits = "dev"
-opt-level = "s" #Optimize for size
-lto = "thin"
+inherits = "release"
+opt-level = 'z'
+lto = true
+codegen-units = 1
+
+[profile.release]
+opt-level = 2
 
 [workspace.dependencies]
 # Panic hook to make debugging wasm easier
@@ -39,6 +43,5 @@ serde_json = "1.0.116"
 sha2 = "0.10.8"
 
 leptos = { version = "0.6.11", features = ["nightly", "csr"] }
+leptos_router = { version = "0.6.11", features = ["nightly", "csr"] }
 
-[profile.release]
-opt-level = 2
