--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -8,5 +8,6 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 leptos.workspace = true 
+leptos_router.workspace = true
 console_error_panic_hook.workspace = true
 wasm-bindgen = "0.2.92"
