--- a/crates/service-worker/Cargo.toml
+++ b/crates/service-worker/Cargo.toml
@@ -20,6 +20,6 @@ web-sys = { version = "0.3.69", features = [
     "Headers",  "ResponseInit",  "Response", 
     "ServiceWorkerGlobalScope", "WorkerGlobalScope", 
     "WorkerLocation", "Clients", "CacheStorage",
-    "Cache", "RequestInit", "MessageEvent"
+    "Cache", "RequestInit", "MessageEvent", "Url"
 ] }
 gloo-utils = "0.2.0"
