--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -43,10 +43,10 @@ futures = "0.3.30"
 include_dir = "0.7.3"
 
 # SQLite lib
-rusqlite = { version = "0.31.0", features = ["bundled", "serde_json", "trace"] }
+rusqlite = { version = "0.30.0", features = ["bundled", "serde_json", "trace"] }
 
 # Migrations for rusqlite
-rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
+rusqlite_migration = { version = "1.1.0", features = ["from-directory"] }
 
 # Se/deserializing 
 serde = { workspace = true }
@@ -57,9 +57,6 @@ strum = { version = "0.26.2", features = ["derive"] }
 
 # Async runtime
 tokio = { version = "1.37.0", features = [ "full" ] }
-
-# Async wrapper for rusqlite
-tokio-rusqlite = "0.5.1"
 
 # Utils for tokio runtime
 tokio-util = "0.7.10"
@@ -74,5 +71,12 @@ zstd = "0.13.1"
 walkdir = "2.5.0"
 
 # Connection pooling for rusqlite
-deadpool-sqlite = { version = "0.8.0", features = [ "tracing" ] }
+deadpool-sqlite = { version = "0.7.0", features = [ "tracing" ] }
 deadpool = "^0.11.0"
+
+# SQL query builder
+sea-query = { version = "0.30.7", features = [ "derive", "attr" ] }
+sea-query-rusqlite = { version = "0.5.0", features = [ "with-chrono", "with-json", "with-uuid", "with-time" ] }
+
+# Reduce rusqlite boilerplate when se/de rusqlite stmts/rows
+exemplar = "0.9.0"
