--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -10,4 +10,6 @@ crate-type = ["cdylib", "rlib"]
 leptos.workspace = true 
 leptos_router.workspace = true
 console_error_panic_hook.workspace = true
+
 wasm-bindgen = "0.2.92"
+shared = { path = "../shared" }
