--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -15,17 +15,18 @@ wasm-opt = "0.116.1"
 glob = "0.3.1"
 
 [dependencies]
-shared = { path = "../shared" }
+shared = { path = "../shared", features = [ "database" ] }
 
 anyhow.workspace = true
 leptos.workspace = true
 tracing.workspace = true
+chrono.workspace = true
+rusqlite.workspace = true
+sea-query.workspace = true
+sea-query-rusqlite.workspace = true
 
 # Web framework
 axum = "0.7.5"
-
-# Date/time util
-chrono = { version = "0.4.38", features = ["serde"] }
 
 # CLI arg parsing
 clap = { version = "4.5.4", features = [ "derive", "env" ] }
@@ -41,9 +42,6 @@ futures = "0.3.30"
 
 # Macro to include a dir in the binary
 include_dir = "0.7.3"
-
-# SQLite lib
-rusqlite = { version = "0.30.0", features = ["bundled", "serde_json", "trace"] }
 
 # Migrations for rusqlite
 rusqlite_migration = { version = "1.1.0", features = ["from-directory"] }
@@ -73,10 +71,6 @@ walkdir = "2.5.0"
 # Connection pooling for rusqlite
 deadpool-sqlite = { version = "0.7.0", features = [ "tracing" ] }
 deadpool = "^0.11.0"
-
-# SQL query builder
-sea-query = { version = "0.30.7", features = [ "derive", "attr" ] }
-sea-query-rusqlite = { version = "0.5.0", features = [ "with-chrono", "with-json", "with-uuid", "with-time" ] }
 
 # Reduce rusqlite boilerplate when se/de rusqlite stmts/rows
 exemplar = "0.9.0"
