--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -3,13 +3,22 @@ name = "shared"
 edition.workspace = true
 version.workspace = true
 
+[features]
+database = [ "rusqlite", "exemplar", "sea-query", "sea-query-rusqlite" ]
+
 [dependencies]
-tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
-dotenv = { workspace = true }
-cargo_toml = { workspace = true }
-anyhow = { workspace = true }
-chrono = { workspace = true }
-serde = { workspace = true }
+tracing.workspace = true
+tracing-subscriber.workspace = true
+dotenv.workspace = true
+cargo_toml.workspace = true
+anyhow.workspace = true
+chrono.workspace = true
+serde.workspace = true
+rusqlite = { workspace = true, optional = true }
+sea-query = { workspace = true, optional = true }
+sea-query-rusqlite = { workspace = true, optional = true }
 
 thiserror = "1.0.58"
+
+# Reduce rusqlite boilerplate when se/de rusqlite stmts/rows
+exemplar = { version = "0.9.0", optional = true }
