--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -10,6 +10,9 @@ crate-type = ["cdylib", "rlib"]
 leptos.workspace = true 
 leptos_router.workspace = true
 console_error_panic_hook.workspace = true
+thiserror.workspace = true
+gloo-net.workspace = true
+serde.workspace = true
 
 wasm-bindgen = "0.2.92"
 shared = { path = "../shared" }
