--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -14,11 +14,11 @@ cargo_toml.workspace = true
 anyhow.workspace = true
 chrono.workspace = true
 serde.workspace = true
+thiserror.workspace = true
+const_format.workspace = true
 rusqlite = { workspace = true, optional = true }
 sea-query = { workspace = true, optional = true }
 sea-query-rusqlite = { workspace = true, optional = true }
-
-thiserror = "1.0.58"
 
 # Reduce rusqlite boilerplate when se/de rusqlite stmts/rows
 exemplar = { version = "0.9.0", optional = true }
