Working webauthn registration

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-RUST_LOG=info,server=debug,service-worker=debug,shared=debug
+RUST_LOG=info,server=debug,service-worker=debug,shared=debug,sqlite_profiling=trace,sqlite=trace
 BIND_ADDR=0.0.0.0
 PORT=9090
+WEBAUTHN_ORIGIN=http://127.0.0.1:9090
+WEBAUTHN_ID=127.0.0.1
