--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ rusqlite = { version = "0.30.0", features = ["bundled", "serde_json", "trace"] }
 
 # SQL query builder
 sea-query = { version = "0.30.7", features = [ "derive", "attr" ] }
-sea-query-rusqlite = { version = "0.5.0", features = [ "with-chrono", "with-json", "with-uuid", "with-time" ] }
+sea-query-rusqlite = { version = "0.5.0", features = [ "with-chrono", "with-json", "with-time" ] }
 
 thiserror = "1.0.58"
 
@@ -59,3 +59,14 @@ gloo-net = "0.5.0"
 
 # Compile-time string formatting macros
 const_format = "0.2.32"
+
+# Webauthn framework
+webauthn-rs = "0.5.0"
+# Contains just the proto structs so they can be used from wasm without pulling in the whole thing
+webauthn-rs-proto = "0.5.0"
+
+web-sys = "0.3.69"
+
+wasm-bindgen = "0.2.92"
+
+wasm-bindgen-futures = "0.4.42"
