--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -13,6 +13,16 @@ console_error_panic_hook.workspace = true
 thiserror.workspace = true
 gloo-net.workspace = true
 serde.workspace = true
+wasm-bindgen-futures.workspace = true
+wasm-bindgen.workspace = true
+webauthn-rs-proto = { workspace = true, features = [ "wasm" ] }
+web-sys = { workspace = true, features = [
+    "CredentialCreationOptions",
+    "CredentialRequestOptions",
+    "CredentialsContainer",
+    "Navigator",
+    "PublicKeyCredential",
+    "PublicKeyCredentialCreationOptions",
+] }
 
-wasm-bindgen = "0.2.92"
 shared = { path = "../shared" }
