--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -24,9 +24,13 @@ chrono.workspace = true
 rusqlite.workspace = true
 sea-query.workspace = true
 sea-query-rusqlite.workspace = true
+webauthn-rs = { workspace = true, features = [ "danger-allow-state-serialisation" ] }
 
 # Web framework
-axum = "0.7.5"
+axum = {version = "0.7.5", features = [ "macros" ] }
+
+# Session management
+tower-sessions = "0.12.2"
 
 # CLI arg parsing
 clap = { version = "4.5.4", features = [ "derive", "env" ] }
