--- a/crates/service-worker/Cargo.toml
+++ b/crates/service-worker/Cargo.toml
@@ -9,12 +9,12 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 serde.workspace = true
 console_error_panic_hook.workspace = true
+wasm-bindgen-futures.workspace = true
+wasm-bindgen.workspace = true
 
 js-sys = "0.3.69"
 shared = { path = "../shared" }
-wasm-bindgen = "0.2.92"
-wasm-bindgen-futures = "0.4.42"
-web-sys = { version = "0.3.69", features = [ 
+web-sys = { workspace = true, features = [ 
     "console", "FetchEvent",  "Request",  
     "ReadableStream",  "ReadableStreamDefaultReader", 
     "Headers",  "ResponseInit",  "Response", 
