--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -4,7 +4,7 @@ edition.workspace = true
 version.workspace = true
 
 [features]
-database = [ "rusqlite", "exemplar", "sea-query", "sea-query-rusqlite" ]
+database = [ "rusqlite/serde_json", "serde_json", "exemplar", "sea-query", "sea-query-rusqlite", "uuid/v4", "webauthn-rs" ]
 
 [dependencies]
 tracing.workspace = true
@@ -16,9 +16,14 @@ chrono.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 const_format.workspace = true
+
 rusqlite = { workspace = true, optional = true }
+serde_json = { workspace = true, optional = true }
+
 sea-query = { workspace = true, optional = true }
 sea-query-rusqlite = { workspace = true, optional = true }
-
+webauthn-rs = { workspace = true, optional = true }
 # Reduce rusqlite boilerplate when se/de rusqlite stmts/rows
 exemplar = { version = "0.9.0", optional = true }
+
+uuid = { version = "1.0", features = [ "serde" ] }
