--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,33 @@ jobs:
         target: ${{ matrix.target }}
         override: true
 
+    - name: Install new openssl
+      shell: bash
+      run: |
+        sudo apt-get update 
+        sudo apt-get install -y build-essential zlib1g-dev wget
+        sudo mkdir -p /usr/local/src
+        cd /usr/local/src
+        sudo wget https://www.openssl.org/source/openssl-3.0.8.tar.gz -O openssl-3.0.8.tar.gz
+        sudo tar -xzf openssl-3.0.8.tar.gz
+        sudo rm openssl-3.0.8.tar.gz
+        cd openssl-3.0.8
+        sudo ./config --prefix=/usr/local/ssl --openssldir=/usr/local/ssl shared zlib
+        sudo make
+        sudo make install
+        echo /usr/local/ssl/lib64 | sudo tee -a /etc/ld.so.conf.d/openssl-3.0.8.conf
+        sudo ldconfig -v
+        sudo rm -f /bin/openssl
+        echo -e 'OPENSSL_PATH="/usr/local/ssl/bin"\nexport OPENSSL_PATH\nPATH=$PATH:$OPENSSL_PATH\nexport PATH\n' | sudo tee /etc/profile.d/openssl.sh
+        sudo chmod +x /etc/profile.d/openssl.sh
+        source /etc/profile.d/openssl.sh
+        echo $PATH
+        which openssl
+        openssl version -a
+        ls -l /usr/local/ssl
+        echo "OPENSSL_DIR=/usr/local/ssl" >> $GITHUB_ENV
+
+
     - name: Use c and c++ compiler from matrix
       shell: bash
       run: |
