--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,3 +1,3 @@
 [toolchain]
-channel = "nightly-2024-05-01"
+channel = "nightly"
 targets = [ "x86_64-unknown-linux-gnu", "wasm32-unknown-unknown" ]
