--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,9 +8,11 @@ on:
   push:
     branches:
       - main
-    # tags:
-    #   - "v[0-9]+.[0-9]+.[0-9]+*"
-  workflow_dispatch:
+      - deploy
+
+concurrency:
+  # Prevent a second instance starting before the previous one finishes so the cache can be optimally be reused on deploy branch
+  group: ${{ github.workflow }}
 
 jobs:
   build:
