--- a/scripts/service/eggercise_rs.service.template
+++ b/scripts/service/eggercise_rs.service.template
@@ -1,14 +1,12 @@
 [Unit]
-Description=eggercise.rs service
+Description=Eggercise web server in docker 
+Requires=docker.service
+After=docker.service
 
 [Service]
-Type=simple
-Restart=on-failure
-RestartSec=5
-User=${APP_USER}
-Group=${APP_USER}
-WorkingDirectory=${WORKING_DIRECTORY}
-ExecStart=${EXEC_START}
+Restart=always
+ExecStart=/usr/bin/docker start -a eggercise.rs
+ExecStop=/usr/bin/docker stop -t 2 eggercise
 
 [Install]
 WantedBy=multi-user.target
