--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -7,7 +7,6 @@ version.workspace = true
 anyhow.workspace = true
 sha2.workspace = true
 serde_json.workspace = true
-
 wasm-bindgen-cli-support = "0.2.92"
 shared = { path = "../shared" }
 base64 = "0.22.0"
@@ -15,7 +14,7 @@ wasm-opt = "0.116.1"
 glob = "0.3.1"
 
 [dependencies]
-shared = { path = "../shared", features = [ "database" ] }
+shared = { path = "../shared", features = [ "backend" ] }
 
 anyhow.workspace = true
 leptos.workspace = true
@@ -25,9 +24,7 @@ rusqlite.workspace = true
 sea-query.workspace = true
 sea-query-rusqlite.workspace = true
 webauthn-rs = { workspace = true, features = [ "danger-allow-state-serialisation" ] }
-
-# Web framework
-axum = {version = "0.7.5", features = [ "macros" ] }
+axum.workspace = true
 
 # Session management
 tower-sessions = "0.12.2"
