--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -4,7 +4,8 @@ edition.workspace = true
 version.workspace = true
 
 [features]
-database = [ "rusqlite/serde_json", "serde_json", "exemplar", "sea-query", "sea-query-rusqlite", "uuid/v4", "webauthn-rs" ]
+backend = [ "rusqlite/serde_json", "serde_json", "exemplar", "sea-query", "sea-query-rusqlite", "uuid/v4", "webauthn-rs", "axum" ]
+frontend = [ "web-sys", "wasm-bindgen", "gloo-net" ]
 
 [dependencies]
 tracing.workspace = true
@@ -17,14 +18,18 @@ serde.workspace = true
 thiserror.workspace = true
 const_format.workspace = true
 webauthn-rs-proto.workspace = true
+http.workspace = true
+serde_with.workspace = true
+http-serde.workspace = true
 
+wasm-bindgen = { workspace = true, optional = true }
+gloo-net = { workspace = true, optional = true }
+web-sys = { workspace = true, optional = true }
+axum = { workspace = true, optional = true }
 rusqlite = { workspace = true, optional = true }
 serde_json = { workspace = true, optional = true }
-
 sea-query = { workspace = true, optional = true }
 sea-query-rusqlite = { workspace = true, optional = true }
 webauthn-rs = { workspace = true, optional = true }
-# Reduce rusqlite boilerplate when se/de rusqlite stmts/rows
 exemplar = { version = "0.9.0", optional = true }
-
 uuid = { version = "1.0", features = [ "serde" ] }
