Cargo sweep caches action should run on deploy

--- a/.github/workflows/cargo_sweep_caches.yml
+++ b/.github/workflows/cargo_sweep_caches.yml
@@ -15,7 +15,23 @@ jobs:
     steps:
       - name: 🛒 Checkout repo
         uses: actions/checkout@master
+        with:
+          ref: deploy
 
+      - name: 🔍 Set build suffix 
+        run: |
+          echo "SUFFIX=$([[ "${{ steps.tag.outputs.tag }}" = "" ]] && echo $GITHUB_SHA || echo ${{ steps.tag.outputs.tag }})" >> $GITHUB_ENV
+          DATE=$(date +'%Y-%m-%d_%H%M%S')
+          REPO=${GITHUB_REPOSITORY#$GITHUB_REPOSITORY_OWNER/}
+          
+          echo ref_name = ${{  github.ref_name }}
+          echo "DATE=$DATE" | tee -a $GITHUB_ENV
+          echo "TAG=$([[ "${{ steps.tag.outputs.tag }}" = "" ]] && echo "main_$DATE" || echo "${{ steps.tag.outputs.tag }}")" | tee -a $GITHUB_ENV
+          echo "REPO_NAME=$REPO" | tee -a $GITHUB_ENV
+          echo "REPO_OWNER=$GITHUB_REPOSITORY_OWNER" | tee -a $GITHUB_ENV
+          echo "IMAGE_TAG=${{ env.REGISTRY }}/$GITHUB_REPOSITORY_OWNER/$REPO:$([[ "${{ github.ref }}" == "refs/heads/deploy" ]] && echo "latest" || echo "main")" | tee -a $GITHUB_ENV
+          echo "IMAGE_NAME=$REPO" | tee -a $GITHUB_ENV
+          
       - name: 🎯 Cache target dir (restore)
         id: cache
         uses: actions/cache@v4
