--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,12 @@ http = "1.1.0"
 # Web framework
 axum = {version = "0.7.5", features = [ "macros" ] }
 
+mime = "0.3.17"
+
+# Connection pooling for rusqlite
+deadpool-sqlite = { version = "0.7.0", features = [ "tracing" ] }
+deadpool = "^0.11.0"
+
 # Helper attributes for serde
 serde_with = "3.8.1"
 http-serde = "2.1.0"
