--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -28,6 +28,7 @@ axum.workspace = true
 deadpool.workspace = true
 deadpool-sqlite.workspace = true
 mime.workspace = true
+thiserror.workspace = true
 
 # QR Code generation
 qrcode = "0.14.0"
