--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -15,7 +15,6 @@ glob = "0.3.1"
 
 [dependencies]
 shared = { path = "../shared", features = [ "backend" ] }
-
 anyhow.workspace = true
 leptos.workspace = true
 tracing.workspace = true
@@ -36,6 +35,7 @@ qrcodegen = "1.8.0"
 
 # Session management
 tower-sessions = "0.12.2"
+tower-sessions-deadpool-sqlite-store = "0.1"
 
 # CLI arg parsing
 clap = { version = "4.5.4", features = [ "derive", "env" ] }
