Added build time to the client version string

--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -7,6 +7,7 @@ version.workspace = true
 anyhow.workspace = true
 sha2.workspace = true
 serde_json.workspace = true
+chrono.workspace = true
 wasm-bindgen-cli-support = "0.2.92"
 shared = { path = "../shared", features = [ "build" ] }
 base64 = "0.22.0"
