--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -69,7 +69,7 @@ tokio = { version = "1.37.0", features = [ "full" ] }
 tokio-util = "0.7.10"
 
 # HTTP utils
-tower-http = { version = "0.5.2", features = [ "trace", "fs", "set-header" ] }
+tower-http = { version = "0.5.2", features = [ "trace", "fs", "set-header", "cors" ] }
 tower = "0.4.13"
 
 # ZSTD encryption bindings
