Switched to using sqlite worker promiser
Passing sqlite handle into client

--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -12,7 +12,9 @@ leptos_router.workspace = true
 console_error_panic_hook.workspace = true
 thiserror.workspace = true
 gloo-net.workspace = true
+gloo-utils.workspace = true
 serde.workspace = true
+serde_json.workspace = true
 wasm-bindgen-futures.workspace = true
 wasm-bindgen.workspace = true
 http.workspace = true
