--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -20,6 +20,9 @@ wasm-bindgen.workspace = true
 http.workspace = true
 mime.workspace = true
 webauthn-rs-proto = { workspace = true, features = [ "wasm" ] }
+tracing.workspace = true
+tracing-subscriber.workspace = true
+tracing-web.workspace = true
 web-sys = { workspace = true, features = [
     "CredentialCreationOptions",
     "CredentialRequestOptions",
