--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,3 +89,6 @@ wasm-bindgen-futures = "0.4.42"
 gloo-utils = "0.2.0"
 
 tracing-web = "0.1.3"
+
+# Macro to include a dir in the binary
+include_dir = "0.7.3"
