Cleaned up the online check (moved to resource in context)
Added some dummy data for exercises

--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -24,6 +24,7 @@ tracing.workspace = true
 tracing-subscriber = { workspace = true, features = [ "time" ] }
 tracing-web.workspace = true
 include_dir.workspace = true
+chrono.workspace = true
 web-sys = { workspace = true, features = [
     "CredentialCreationOptions",
     "CredentialRequestOptions",
