Made it possible to use shared::model::* on the client side

--- a/crates/client/Cargo.toml
+++ b/crates/client/Cargo.toml
@@ -25,6 +25,7 @@ tracing-subscriber = { workspace = true, features = [ "time" ] }
 tracing-web.workspace = true
 include_dir.workspace = true
 chrono.workspace = true
+sea-query.workspace = true
 web-sys = { workspace = true, features = [
     "CredentialCreationOptions",
     "CredentialRequestOptions",
