--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -52,6 +52,7 @@ webauthn-rs-proto.workspace = true
 http.workspace = true
 serde_with.workspace = true
 http-serde.workspace = true
+paste.workspace = true
 
 percent-encoding = "2.3.1"
 anyhow = { workspace = true, optional = true }
