--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,18 +47,18 @@ jobs:
           key: ${{ env.REPO_NAME }}_target_cache-${{ hashFiles('**/Cargo.toml') }}
           path: |
             target
-            cargo_registry
+            cargo_home
           restore-keys: |
             ${{ env.REPO_NAME }}_target_cache-
           save-always: true
 
       - name: 🪲 Cache debug
         run: |
-          mkdir -p cargo_registry
+          mkdir -p cargo_home
           mkdir -p target
           echo "Cache hit: ${{ steps.cache.outputs.cache-hit }}"
           echo "du -sh target: `du -sh target`"
-          echo "du -sh cargo_registry: `du -sh cargo_registry`"
+          echo "du -sh cargo_home: `du -sh cargo_home`"
 
       - name: 💉 Inject cache into docker
         uses: reproducible-containers/buildkit-cache-dance@v3.1.0
@@ -66,7 +66,7 @@ jobs:
           cache-map: |
             {
               "target": "/server/target",
-              "cargo_registry": "/usr/local/cargo/registry"
+              "cargo_home": "/cargo_home"
             }
           skip-extraction: ${{ steps.cache.outputs.cache-hit }}
 
@@ -156,7 +156,7 @@ jobs:
           key: ${{ env.REPO_NAME }}_target_cache-${{ hashFiles('**/Cargo.toml') }}
           path: |
             target
-            cargo_registry
+            cargo_home
           restore-keys: |
             ${{ env.REPO_NAME }}_target_cache-
           save-always: true
