--- a/docker/sweeper/Dockerfile
+++ b/docker/sweeper/Dockerfile
@@ -3,7 +3,8 @@ WORKDIR /server
 
 COPY . .
 
+ARG CARGO_HOME=/cargo_home
 RUN \
     --mount=type=cache,target=/server/target,sharing=locked \
-    --mount=type=cache,target=/usr/local/cargo/registry,sharing=locked \
+    --mount=type=cache,target=/cargo_home,sharing=locked \
     cargo sweep --installed && cargo sweep --time 30 
